# petl

./: .gitignore  Cargo.toml  README.md
examples/: simple_http.rs  simple_pg.rs
examples/files/: docker-compose.yml
macros/: Cargo.toml
macros/src/: lib.rs
petl-macros/: Cargo.toml
petl-macros/src/: lib.rs
src/: connections.rs  fs.rs  lib.rs  session.rs
src/http/: extract.rs  mod.rs
src/postgres/: compress.rs  config.rs  extract.rs  load.rs  mod.rs  traits.rs
tests/: postgres.rs
