[package]
name = "petl"
version = "0.1.0"
edition = "2024"

[features]
default = [ "postgres", "fs", "http" ]
postgres = [ "dep:tokio-postgres", "dep:deadpool-postgres", "dep:macros" ]
fs = [ "dep:serde", "dep:serde_json", "dep:rayon", "dep:base64", "dep:zip", "dep:csv" ]
http = [ "dep:reqwest", "dep:futures", "dep:tokio" ]

[dependencies]
macros = { path = "./macros", optional = true }
anyhow = "1.0.102"
async-trait = "0.1.89"
base64 = { version = "0.22.1", optional = true }
chrono = { version = "0.4.44", features = ["clock"] }
csv = { version = "1.4.0", optional = true }
deadpool-postgres = { version = "0.14.1", optional = true }
futures = { version = "0.3.32", optional = true }
num_cpus = { version = "1.17.0", optional = true }
rayon = { version = "1.11.0", optional = true}
reqwest = { version = "0.13.2", features = ["json", "stream"], optional = true }
serde = { version = "1.0.228", optional = true }
serde_json = { version = "1.0.149", optional = true }
tokio = { version = "1.47.1", features = ["fs"], optional = true }
tokio-postgres = { version = "0.7.16", optional = true }
tracing = "0.1.44"
zip = { version = "8.2.0", optional = true }

[dev-dependencies]
deadpool-postgres = { version = "0.14.1" }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }

[[example]]
name = "simple_http"
required-features = ["http"]
