[package]
name = "petl"
version = "0.1.0"
edition = "2024"

[dependencies]
petl-macros = { path = "./petl-macros" }
anyhow = "1.0.102"
async-trait = "0.1.89"
base64 = { version = "0.22.1" }
chrono = { version = "0.4.44", features = ["clock"] }
csv = { version = "1.4.0" }
deadpool-postgres = { version = "0.14.1" }
futures = { version = "0.3.32" }
num_cpus = { version = "1.17.0" }
rayon = { version = "1.11.0" }
reqwest = { version = "0.13.2", features = ["json", "stream", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149" }
tokio = { version = "1.47.1", features = ["fs"] }
tokio-postgres = { version = "0.7.16" }
tracing = "0.1.44"
zip = { version = "8.2.0" }
config = "0.15.19"

[dev-dependencies]
deadpool-postgres = { version = "0.14.1" }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }

[[example]]
name = "simple_http"
required-features = ["http"]
